fixed footer issue on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -7,10 +7,17 @@
 
 html, body {
     width: 100%;
+    height: 100%;
     padding: 0;
     margin: 0;
     cursor: default;
     user-select: none;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
 h1{
@@ -286,6 +293,7 @@ footer{
     justify-content: center;
     gap: 3vh;
     margin: 5vh;
+    flex: 1;
 }
 
 .blog-list .tile{
@@ -300,11 +308,6 @@ footer{
 .blog-list .tile:hover{
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
     transform: translateY(-5px);
-}
-
-#blog-foot{
-    position: absolute;
-    bottom: 0;
 }
 
 .blog-post{
